// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricsDashboard > should collapse all repository metrics when clicks on collapse all button 1`] = `
<div class="v-expansion-panels v-theme--light v-expansion-panels--variant-default" test-id="metrics-dashboard-expansion-panels">
  <div class="v-expansion-panel" test-id="metrics-dashboard-expansion-panel-hello_world">
    <div class="v-expansion-panel__shadow"></div>
    <button aria-expanded="false" class="v-expansion-panel-title v-expansion-panel-title--static" type="button">
      <span class="v-expansion-panel-title__overlay"></span>hello_world<span class="v-expansion-panel-title__icon">
        <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
          <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
          </svg>
        </i>
      </span>
    </button>
    <!---->
    <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
      <div class="v-expansion-panel-text" style="display: none;">
        <div class="v-expansion-panel-text__wrapper">
          <div class="v-container v-container--fluid v-locale--is-ltr" id="hello_world-metrics">
            <div class="v-row v-row--dense">
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Workflow Run Frequency</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="hello_world_Workflow_Run_Frequency_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Workflow Run Failure Rate</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="hello_world_Workflow_Run_Failure_Rate_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Workflow Re-trigger Rate</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="hello_world_Workflow_Re-trigger_Rate_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Average Workflow Run Time (Minutes)</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="hello_world_Average_Workflow_Run_Time_(Minutes)_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class="v-expansion-panel" test-id="metrics-dashboard-expansion-panel-test">
    <div class="v-expansion-panel__shadow"></div>
    <button aria-expanded="false" class="v-expansion-panel-title v-expansion-panel-title--static" type="button">
      <span class="v-expansion-panel-title__overlay"></span>test<span class="v-expansion-panel-title__icon">
        <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
          <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
            <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
          </svg>
        </i>
      </span>
    </button>
    <!---->
    <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
      <div class="v-expansion-panel-text" style="display: none;">
        <div class="v-expansion-panel-text__wrapper">
          <div class="v-container v-container--fluid v-locale--is-ltr" id="test-metrics">
            <div class="v-row v-row--dense">
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Workflow Run Frequency</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="test_Workflow_Run_Frequency_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Workflow Run Failure Rate</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="test_Workflow_Run_Failure_Rate_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Workflow Re-trigger Rate</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="test_Workflow_Re-trigger_Rate_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
              <div class="v-col v-col-3">
                <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                  <!---->
                  <div class="v-card__loader">
                    <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                      <!---->
                      <div class="v-progress-linear__background"></div>
                      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                      <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                        <div class="v-progress-linear__indeterminate">
                          <div class="v-progress-linear__indeterminate long"></div>
                          <div class="v-progress-linear__indeterminate short"></div>
                        </div>
                      </transition-stub>
                      <!---->
                    </div>
                  </div>
                  <!---->
                  <!---->
                  <div class="v-card-subtitle">
                    <div class="v-row align-center justify-space-between">
                      <div class="v-col v-col-auto">Average Workflow Run Time (Minutes)</div>
                      <div class="v-col v-col-auto">
                        <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                          <span class="v-btn__overlay"></span>
                          <span class="v-btn__underlay"></span>
                          <!---->
                          <span class="v-btn__content" data-no-activator>
                            <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                              <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                              </svg>
                            </i>
                          </span>
                          <!---->
                          <!---->
                        </button>
                      </div>
                    </div>
                  </div>
                  <canvas height="0" id="test_Average_Workflow_Run_Time_(Minutes)_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                    <p></p>
                  </canvas>
                  <!---->
                  <!---->
                  <span class="v-card__underlay"></span>
                </div>
                <!---->
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`MetricsDashboard > should display repository metrics when clicks on expansion icon 1`] = `
<svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
  <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
</svg>
`;

exports[`MetricsDashboard > should display repository metrics when clicks on expansion icon 2`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <div
    class="v-expansion-panels v-theme--light v-expansion-panels--variant-default"
    data-v-a30323f4=""
    test-id="metrics-dashboard-expansion-panels"
  >
    
    
    <div
      class="v-expansion-panel v-expansion-panel--active"
      data-v-a30323f4=""
      test-id="metrics-dashboard-expansion-panel-hello_world"
    >
      <div
        class="v-expansion-panel__shadow"
      />
      
      <button
        aria-expanded="true"
        class="v-expansion-panel-title v-expansion-panel-title--active v-expansion-panel-title--static"
        type="button"
      >
        <span
          class="v-expansion-panel-title__overlay"
        />
        
        hello_world
        
        
        <span
          class="v-expansion-panel-title__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light v-icon--size-default"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
              />
            </svg>
          </i>
        </span>
        
      </button>
      <!---->
      
      <transition-stub
        appear="false"
        css="true"
        data-v-a30323f4=""
        name="expand-transition"
        persisted="false"
      >
        <div
          class="v-expansion-panel-text"
          style=""
        >
          <div
            class="v-expansion-panel-text__wrapper"
          >
            
            <div
              class="v-container v-container--fluid v-locale--is-ltr"
              data-v-a30323f4=""
              id="hello_world-metrics"
            >
              <div
                class="v-row v-row--dense"
              >
                <div
                  class="v-col v-col-3"
                >
                  
                  <div
                    class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin"
                  >
                    <!---->
                    <div
                      class="v-card__loader"
                    >
                      <div
                        aria-hidden="true"
                        aria-valuemax="100"
                        aria-valuemin="0"
                        class="v-progress-linear v-theme--light v-locale--is-ltr"
                        role="progressbar"
                        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                      >
                        <!---->
                        <div
                          class="v-progress-linear__background"
                        />
                        <div
                          class="v-progress-linear__buffer"
                          style="width: 0%;"
                        />
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade-transition"
                          persisted="false"
                        >
                          <div
                            class="v-progress-linear__indeterminate"
                          >
                            
                            <div
                              class="v-progress-linear__indeterminate long"
                            />
                            <div
                              class="v-progress-linear__indeterminate short"
                            />
                            
                          </div>
                        </transition-stub>
                        <!---->
                      </div>
                    </div>
                    <!---->
                    <!---->
                    
                    <div
                      class="v-card-subtitle"
                    >
                      <div
                        class="v-row align-center justify-space-between"
                      >
                        <div
                          class="v-col v-col-auto"
                        >
                          Workflow Run Frequency
                        </div>
                        <div
                          class="v-col v-col-auto"
                        >
                          <button
                            aria-label="Expand"
                            class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                            type="button"
                          >
                            
                            <span
                              class="v-btn__overlay"
                            />
                            <span
                              class="v-btn__underlay"
                            />
                            
                            <!---->
                            <span
                              class="v-btn__content"
                              data-no-activator=""
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-theme--light v-icon--size-default"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="v-icon__svg"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z"
                                  />
                                </svg>
                              </i>
                            </span>
                            <!---->
                            <!---->
                          </button>
                        </div>
                      </div>
                    </div>
                    <canvas
                      height="0"
                      id="hello_world_Workflow_Run_Frequency_grid"
                      role="img"
                      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
                      width="0"
                    >
                      <p>
                        
                      </p>
                    </canvas>
                    
                    <!---->
                    
                    <!---->
                    <span
                      class="v-card__underlay"
                    />
                    
                  </div>
                  
                  <!---->
                  <!---->
                  
                  
                </div>
                <div
                  class="v-col v-col-3"
                >
                  
                  <div
                    class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin"
                  >
                    <!---->
                    <div
                      class="v-card__loader"
                    >
                      <div
                        aria-hidden="true"
                        aria-valuemax="100"
                        aria-valuemin="0"
                        class="v-progress-linear v-theme--light v-locale--is-ltr"
                        role="progressbar"
                        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                      >
                        <!---->
                        <div
                          class="v-progress-linear__background"
                        />
                        <div
                          class="v-progress-linear__buffer"
                          style="width: 0%;"
                        />
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade-transition"
                          persisted="false"
                        >
                          <div
                            class="v-progress-linear__indeterminate"
                          >
                            
                            <div
                              class="v-progress-linear__indeterminate long"
                            />
                            <div
                              class="v-progress-linear__indeterminate short"
                            />
                            
                          </div>
                        </transition-stub>
                        <!---->
                      </div>
                    </div>
                    <!---->
                    <!---->
                    
                    <div
                      class="v-card-subtitle"
                    >
                      <div
                        class="v-row align-center justify-space-between"
                      >
                        <div
                          class="v-col v-col-auto"
                        >
                          Workflow Run Failure Rate
                        </div>
                        <div
                          class="v-col v-col-auto"
                        >
                          <button
                            aria-label="Expand"
                            class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                            type="button"
                          >
                            
                            <span
                              class="v-btn__overlay"
                            />
                            <span
                              class="v-btn__underlay"
                            />
                            
                            <!---->
                            <span
                              class="v-btn__content"
                              data-no-activator=""
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-theme--light v-icon--size-default"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="v-icon__svg"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z"
                                  />
                                </svg>
                              </i>
                            </span>
                            <!---->
                            <!---->
                          </button>
                        </div>
                      </div>
                    </div>
                    <canvas
                      height="0"
                      id="hello_world_Workflow_Run_Failure_Rate_grid"
                      role="img"
                      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
                      width="0"
                    >
                      <p>
                        
                      </p>
                    </canvas>
                    
                    <!---->
                    
                    <!---->
                    <span
                      class="v-card__underlay"
                    />
                    
                  </div>
                  
                  <!---->
                  <!---->
                  
                  
                </div>
                <div
                  class="v-col v-col-3"
                >
                  
                  <div
                    class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin"
                  >
                    <!---->
                    <div
                      class="v-card__loader"
                    >
                      <div
                        aria-hidden="true"
                        aria-valuemax="100"
                        aria-valuemin="0"
                        class="v-progress-linear v-theme--light v-locale--is-ltr"
                        role="progressbar"
                        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                      >
                        <!---->
                        <div
                          class="v-progress-linear__background"
                        />
                        <div
                          class="v-progress-linear__buffer"
                          style="width: 0%;"
                        />
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade-transition"
                          persisted="false"
                        >
                          <div
                            class="v-progress-linear__indeterminate"
                          >
                            
                            <div
                              class="v-progress-linear__indeterminate long"
                            />
                            <div
                              class="v-progress-linear__indeterminate short"
                            />
                            
                          </div>
                        </transition-stub>
                        <!---->
                      </div>
                    </div>
                    <!---->
                    <!---->
                    
                    <div
                      class="v-card-subtitle"
                    >
                      <div
                        class="v-row align-center justify-space-between"
                      >
                        <div
                          class="v-col v-col-auto"
                        >
                          Workflow Re-trigger Rate
                        </div>
                        <div
                          class="v-col v-col-auto"
                        >
                          <button
                            aria-label="Expand"
                            class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                            type="button"
                          >
                            
                            <span
                              class="v-btn__overlay"
                            />
                            <span
                              class="v-btn__underlay"
                            />
                            
                            <!---->
                            <span
                              class="v-btn__content"
                              data-no-activator=""
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-theme--light v-icon--size-default"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="v-icon__svg"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z"
                                  />
                                </svg>
                              </i>
                            </span>
                            <!---->
                            <!---->
                          </button>
                        </div>
                      </div>
                    </div>
                    <canvas
                      height="0"
                      id="hello_world_Workflow_Re-trigger_Rate_grid"
                      role="img"
                      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
                      width="0"
                    >
                      <p>
                        
                      </p>
                    </canvas>
                    
                    <!---->
                    
                    <!---->
                    <span
                      class="v-card__underlay"
                    />
                    
                  </div>
                  
                  <!---->
                  <!---->
                  
                  
                </div>
                <div
                  class="v-col v-col-3"
                >
                  
                  <div
                    class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin"
                  >
                    <!---->
                    <div
                      class="v-card__loader"
                    >
                      <div
                        aria-hidden="true"
                        aria-valuemax="100"
                        aria-valuemin="0"
                        class="v-progress-linear v-theme--light v-locale--is-ltr"
                        role="progressbar"
                        style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
                      >
                        <!---->
                        <div
                          class="v-progress-linear__background"
                        />
                        <div
                          class="v-progress-linear__buffer"
                          style="width: 0%;"
                        />
                        <transition-stub
                          appear="false"
                          css="true"
                          name="fade-transition"
                          persisted="false"
                        >
                          <div
                            class="v-progress-linear__indeterminate"
                          >
                            
                            <div
                              class="v-progress-linear__indeterminate long"
                            />
                            <div
                              class="v-progress-linear__indeterminate short"
                            />
                            
                          </div>
                        </transition-stub>
                        <!---->
                      </div>
                    </div>
                    <!---->
                    <!---->
                    
                    <div
                      class="v-card-subtitle"
                    >
                      <div
                        class="v-row align-center justify-space-between"
                      >
                        <div
                          class="v-col v-col-auto"
                        >
                          Average Workflow Run Time (Minutes)
                        </div>
                        <div
                          class="v-col v-col-auto"
                        >
                          <button
                            aria-label="Expand"
                            class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated"
                            type="button"
                          >
                            
                            <span
                              class="v-btn__overlay"
                            />
                            <span
                              class="v-btn__underlay"
                            />
                            
                            <!---->
                            <span
                              class="v-btn__content"
                              data-no-activator=""
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate v-theme--light v-icon--size-default"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="v-icon__svg"
                                  role="img"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z"
                                  />
                                </svg>
                              </i>
                            </span>
                            <!---->
                            <!---->
                          </button>
                        </div>
                      </div>
                    </div>
                    <canvas
                      height="0"
                      id="hello_world_Average_Workflow_Run_Time_(Minutes)_grid"
                      role="img"
                      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
                      width="0"
                    >
                      <p>
                        
                      </p>
                    </canvas>
                    
                    <!---->
                    
                    <!---->
                    <span
                      class="v-card__underlay"
                    />
                    
                  </div>
                  
                  <!---->
                  <!---->
                  
                  
                </div>
              </div>
            </div>
            
          </div>
        </div>
      </transition-stub>
      
      
    </div>
    <div
      class="v-expansion-panel v-expansion-panel--after-active"
      data-v-a30323f4=""
      test-id="metrics-dashboard-expansion-panel-test"
    >
      <div
        class="v-expansion-panel__shadow"
      />
      
      <button
        aria-expanded="false"
        class="v-expansion-panel-title v-expansion-panel-title--static"
        type="button"
      >
        <span
          class="v-expansion-panel-title__overlay"
        />
        
        test
        
        
        <span
          class="v-expansion-panel-title__icon"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light v-icon--size-default"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z"
              />
            </svg>
          </i>
        </span>
        
      </button>
      <!---->
      
      <transition-stub
        appear="false"
        css="true"
        data-v-a30323f4=""
        name="expand-transition"
        persisted="false"
      >
        <div
          class="v-expansion-panel-text"
          style="display: none;"
        >
          <!---->
        </div>
      </transition-stub>
      
      
    </div>
    
    
  </div>,
}
`;

exports[`MetricsDashboard > should display spinner when component is loading 1`] = `
<div class="v-container v-container--fluid v-locale--is-ltr" id="metrics-dashboard">
  <header class="v-toolbar v-toolbar--density-default elevation-5 v-theme--light v-locale--is-ltr v-app-bar" style="top: 0px; z-index: 1004; transform: translateY(0px); position: fixed; left: 0px; width: calc(100% - 0px - 0px);">
    <!---->
    <div class="v-toolbar__content" style="height: 64px;">
      <!---->
      <!---->
      <div class="v-row v-row--no-gutters">
        <div class="v-col v-col-10">
          <div class="v-toolbar-title header-title text-center font-weight-bold pl-10 v-app-bar-title">
            <div class="v-toolbar-title__placeholder">
              <!---->
              <span>Gitaction Board</span>
              <span class="version">(v5.0.0)</span>
            </div>
          </div>
        </div>
        <div class="v-col v-col-2 d-inline-flex">
          <div class="v-toolbar-title pr-4 text-right font-weight-bold align-center fill-height d-inline-flex flex-row-reverse mt-3 v-app-bar-title" id="sub-header">
            <div class="v-toolbar-title__placeholder">
              <!---->
              Metrics
            </div>
          </div>
        </div>
      </div>
      <!---->
    </div>
    <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
      <!---->
    </transition-stub>
  </header>
  <header class="v-toolbar v-toolbar--density-default elevation-4 v-theme--light v-locale--is-ltr mb-2">
    <!---->
    <div class="v-toolbar__content" style="height: 64px;">
      <!---->
      <!---->
      <div class="v-spacer"></div>
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-input--dirty v-text-field mr-2" style="max-width: 350px;">
        <div class="v-input__prepend">
          <!---->
          <i aria-hidden="false" aria-label="Date Range prepended action" class="v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" tabindex="0">
            <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
              <path d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" />
            </svg>
          </i>
        </div>
        <div class="v-input__control">
          <div aria-controls="v-menu-3" aria-expanded="false" aria-haspopup="menu" class="v-field v-field--active v-field--center-affix v-field--dirty v-field--variant-filled v-theme--light v-locale--is-ltr">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator>
              <label aria-hidden="true" class="v-label v-field-label v-field-label--floating" for="input-1">
                <!---->
                Date Range
              </label>
              <label class="v-label v-field-label" for="input-1">
                <!---->
                Date Range
              </label>
              <!---->
              <div class="v-field__input" data-no-activator>
                <!---->
                <!---->
                <!---->
                <input aria-describedby="input-1-messages" id="input-1" placeholder="mm/dd/yyyy" size="1" test-id="vuetify-date-range-picker" type="text" value="08/15/2024 - 08/22/2024">
              </div>
              <!---->
            </div>
            <!---->
            <!---->
            <div class="v-field__outline">
              <!---->
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <div aria-live="polite" class="v-input__details" id="input-1-messages" role="alert">
          <transition-group-stub appear="false" class="v-messages" css="true" name="slide-y-transition" persisted="false" tag="div">
            <!---->
          </transition-group-stub>
          <!---->
        </div>
      </div>
      <button class="v-btn v-theme--light v-btn--density-default v-btn--rounded v-btn--size-default v-btn--variant-text text-none" test-id="expand-all" type="button">
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span class="v-btn__content" data-no-activator>Expand all</span>
        <!---->
        <!---->
      </button>
      <button class="v-btn v-theme--light v-btn--density-default v-btn--rounded v-btn--size-default v-btn--variant-text text-none" test-id="collapse-all" type="button">
        <span class="v-btn__overlay"></span>
        <span class="v-btn__underlay"></span>
        <!---->
        <span class="v-btn__content" data-no-activator>Collapse all</span>
        <!---->
        <!---->
      </button>
      <!---->
    </div>
    <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
      <!---->
    </transition-stub>
  </header>
  <div class="v-container v-locale--is-ltr justify-center fill-height spinner-container" id="spinner-container">
    <div aria-valuemax="100" aria-valuemin="0" class="v-progress-circular v-progress-circular--indeterminate v-theme--light" role="progressbar" style="width: 128px; height: 128px; color: rgb(95, 141, 119); caret-color: #5f8d77;">
      <svg style="transform: rotate(calc(-90deg + 0deg));" viewBox="0 0 44.13793103448276 44.13793103448276" xmlns="http://www.w3.org/2000/svg">
        <circle class="v-progress-circular__underlay" cx="50%" cy="50%" fill="transparent" r="20" stroke-dasharray="125.66370614359172" stroke-dashoffset="0" stroke-width="4.137931034482759" />
        <circle class="v-progress-circular__overlay" cx="50%" cy="50%" fill="transparent" r="20" stroke-dasharray="125.66370614359172" stroke-dashoffset="125.66370614359172px" stroke-width="4.137931034482759" />
      </svg>
      <!---->
    </div>
  </div>
</div>
`;

exports[`MetricsDashboard > should hide repository metrics when clicks on collapse icon 1`] = `
<svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
  <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
</svg>
`;

exports[`MetricsDashboard > should hide repository metrics when clicks on collapse icon 2`] = `
<svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
  <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" />
</svg>
`;

exports[`MetricsDashboard > should hide repository metrics when clicks on collapse icon 3`] = `
<div class="v-expansion-panel" test-id="metrics-dashboard-expansion-panel-hello_world">
  <div class="v-expansion-panel__shadow"></div>
  <button aria-expanded="false" class="v-expansion-panel-title v-expansion-panel-title--static" type="button">
    <span class="v-expansion-panel-title__overlay"></span>hello_world<span class="v-expansion-panel-title__icon">
      <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
        <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
          <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
        </svg>
      </i>
    </span>
  </button>
  <!---->
  <transition-stub appear="false" css="true" name="expand-transition" persisted="false">
    <div class="v-expansion-panel-text" style="display: none;">
      <div class="v-expansion-panel-text__wrapper">
        <div class="v-container v-container--fluid v-locale--is-ltr" id="hello_world-metrics">
          <div class="v-row v-row--dense">
            <div class="v-col v-col-3">
              <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                <!---->
                <div class="v-card__loader">
                  <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                    <!---->
                    <div class="v-progress-linear__background"></div>
                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                    <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <!---->
                <div class="v-card-subtitle">
                  <div class="v-row align-center justify-space-between">
                    <div class="v-col v-col-auto">Workflow Run Frequency</div>
                    <div class="v-col v-col-auto">
                      <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                        <span class="v-btn__overlay"></span>
                        <span class="v-btn__underlay"></span>
                        <!---->
                        <span class="v-btn__content" data-no-activator>
                          <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                            <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                              <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                            </svg>
                          </i>
                        </span>
                        <!---->
                        <!---->
                      </button>
                    </div>
                  </div>
                </div>
                <canvas height="0" id="hello_world_Workflow_Run_Frequency_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                  <p></p>
                </canvas>
                <!---->
                <!---->
                <span class="v-card__underlay"></span>
              </div>
              <!---->
              <!---->
            </div>
            <div class="v-col v-col-3">
              <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                <!---->
                <div class="v-card__loader">
                  <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                    <!---->
                    <div class="v-progress-linear__background"></div>
                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                    <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <!---->
                <div class="v-card-subtitle">
                  <div class="v-row align-center justify-space-between">
                    <div class="v-col v-col-auto">Workflow Run Failure Rate</div>
                    <div class="v-col v-col-auto">
                      <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                        <span class="v-btn__overlay"></span>
                        <span class="v-btn__underlay"></span>
                        <!---->
                        <span class="v-btn__content" data-no-activator>
                          <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                            <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                              <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                            </svg>
                          </i>
                        </span>
                        <!---->
                        <!---->
                      </button>
                    </div>
                  </div>
                </div>
                <canvas height="0" id="hello_world_Workflow_Run_Failure_Rate_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                  <p></p>
                </canvas>
                <!---->
                <!---->
                <span class="v-card__underlay"></span>
              </div>
              <!---->
              <!---->
            </div>
            <div class="v-col v-col-3">
              <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                <!---->
                <div class="v-card__loader">
                  <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                    <!---->
                    <div class="v-progress-linear__background"></div>
                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                    <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <!---->
                <div class="v-card-subtitle">
                  <div class="v-row align-center justify-space-between">
                    <div class="v-col v-col-auto">Workflow Re-trigger Rate</div>
                    <div class="v-col v-col-auto">
                      <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                        <span class="v-btn__overlay"></span>
                        <span class="v-btn__underlay"></span>
                        <!---->
                        <span class="v-btn__content" data-no-activator>
                          <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                            <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                              <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                            </svg>
                          </i>
                        </span>
                        <!---->
                        <!---->
                      </button>
                    </div>
                  </div>
                </div>
                <canvas height="0" id="hello_world_Workflow_Re-trigger_Rate_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                  <p></p>
                </canvas>
                <!---->
                <!---->
                <span class="v-card__underlay"></span>
              </div>
              <!---->
              <!---->
            </div>
            <div class="v-col v-col-3">
              <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated border-thin">
                <!---->
                <div class="v-card__loader">
                  <div aria-hidden="true" aria-valuemax="100" aria-valuemin="0" class="v-progress-linear v-theme--light v-locale--is-ltr" role="progressbar" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;">
                    <!---->
                    <div class="v-progress-linear__background"></div>
                    <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                    <transition-stub appear="false" css="true" name="fade-transition" persisted="false">
                      <div class="v-progress-linear__indeterminate">
                        <div class="v-progress-linear__indeterminate long"></div>
                        <div class="v-progress-linear__indeterminate short"></div>
                      </div>
                    </transition-stub>
                    <!---->
                  </div>
                </div>
                <!---->
                <!---->
                <div class="v-card-subtitle">
                  <div class="v-row align-center justify-space-between">
                    <div class="v-col v-col-auto">Average Workflow Run Time (Minutes)</div>
                    <div class="v-col v-col-auto">
                      <button aria-label="Expand" class="v-btn v-btn--elevated v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated" type="button">
                        <span class="v-btn__overlay"></span>
                        <span class="v-btn__underlay"></span>
                        <!---->
                        <span class="v-btn__content" data-no-activator>
                          <i aria-hidden="true" class="v-icon notranslate v-theme--light v-icon--size-default">
                            <svg aria-hidden="true" class="v-icon__svg" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                              <path d="M10,21V19H6.41L10.91,14.5L9.5,13.09L5,17.59V14H3V21H10M14.5,10.91L19,6.41V10H21V3H14V5H17.59L13.09,9.5L14.5,10.91Z" />
                            </svg>
                          </i>
                        </span>
                        <!---->
                        <!---->
                      </button>
                    </div>
                  </div>
                </div>
                <canvas height="0" id="hello_world_Average_Workflow_Run_Time_(Minutes)_grid" role="img" style="display: block; box-sizing: border-box; height: 0px; width: 0px;" width="0">
                  <p></p>
                </canvas>
                <!---->
                <!---->
                <span class="v-card__underlay"></span>
              </div>
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
